feat: Enhance recipe generation and display
This commit introduces significant enhancements to the Mr. Chef AI Assistant by:

- **Expanding Recipe Data Structure:** The `Recipe` type in `types.ts` is updated to include new fields like `time`, `difficulty`, `rating`, `calories`, and `description`.
- **Improving AI Prompt:** The `geminiService.ts` now prompts the AI to generate these additional fields, ensuring richer recipe data.
- **Updating Mock Data:** `constants.ts` is updated with sample data for the new fields in three example recipes.
- **Enhancing UI Display:**
    - `views/Home.tsx` now displays `time`, `difficulty`, and `calories` for each recipe card.
    - `views/RecipeDetail.tsx` showcases all new recipe details (description, time, servings, difficulty, calories) in a more structured and visually appealing manner.
- **Refining Recipe Generation:** `views/RecipeMaker.tsx` includes logic to normalize the AI-generated difficulty level and uses a placeholder image if one isn't provided.
- **Updating README:** The README.md file is updated with a new AI Studio app URL.

--- a/package.json
+++ b/package.json
@@ -4,15 +4,22 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "tsx server.ts",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.ts",
+    "lint": "tsc --noEmit"
   },
   "dependencies": {
     "@google/genai": "^1.41.0",
+    "cors": "^2.8.6",
+    "dotenv": "^17.3.1",
+    "express": "^5.2.1",
     "lucide-react": "^0.564.0",
+    "mongoose": "^9.2.1",
+    "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "react": "^19.2.4"
+    "tsx": "^4.21.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
