--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "lucide-react": "^0.564.0",
+    "mongodb": "^7.1.0",
     "mongoose": "^9.2.1",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
